<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.kevin.braceletproject.Principal"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBrazalete"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/bracelet" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/descripcion"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/lblCotizar"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/satisfy"
        android:text="@string/cotizar"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbTipoDivisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblCosto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/lblDivisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="USD"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTipoMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/material"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbTipoMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTipoDije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dije"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbTipoDije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTipoMetal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/metal"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbTipoMetal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtCantManillas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidadManillas"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnCalcular"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:onClick="cotizar"
        android:text="@string/calcular" />

</LinearLayout>
